# AI-Copilot-Dashboard

./: .gitignore  Architecting Trader Copilot AI.md  docs_extracted.txt  master_plan.md
Root_Doc/: Trader Copilot AI Design.docx  Trader Copilot AI Development Roadmap.docx  Trader Copilot AI System Overview.docx  Trader Copilot AI Technical Architecture.docx
backend/: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  recreate_models.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_19_58063c54cfba_init.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/ai/: routes.py
backend/app/api/analytics/: routes.py
backend/app/api/auth/: routes.py
backend/app/api/risk/: routes.py
backend/app/api/strategies/: routes.py
backend/app/api/trades/: routes.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  analytics.py  market_context.py  risk_calculation.py  risk_profile.py  rule_validation.py  strategy.py  trade.py  trade_note.py  user.py
backend/app/repositories/: strategy_repository.py  trade_repository.py  user_repository.py
backend/app/schemas/: analytics.py  auth.py  common.py  market_context.py  risk.py  strategy.py  trade.py  trade_note.py  user.py
backend/app/services/: ai_coach.py  analytics_engine.py  auth_service.py  risk_engine.py  rule_engine.py  strategy_service.py  trade_service.py
backend/screenshots/: .gitkeep
frontend/: package-lock.json  package.json
(+21 files in other folders)
